--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,goland+all
 n
+dist
+tmp
+deploydock
+id_rsa
